--- a/predatoryprostitutegallery.html
+++ b/predatoryprostitutegallery.html
@@ -52,7 +52,8 @@
     </div>
     <div class="nine columns">
 
-    <iframe src="https://docs.google.com/file/d/0ByoYRtPRL-_XVnVucHl6Y2RHTGs/preview" width="640" height="480"></iframe>
+    <iframe src="https://player.vimeo.com/video/254502605" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/254502605">Predatory Prostitute</a> from <a href="https://vimeo.com/user80451822">Juniper Fleming</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
       
         <p><p>As an artist and queer sex worker, my community is at the very core of how and what I create. Critiquing the hegemonic through a self-reflective narrative, my work accepts and affirm my community's humanity. The film, Predatory Prostitute is rooted in the compelling relationships sex workers have, both directly and indirectly, to the legacy of Aileen Wuornos. Demonized as a inverted prostitute serial killer or pitied as an child/animal-minded victim, her portrait hangs heavy.</p></p>
 
