edit resume and bio

--- a/biography-CV.html
+++ b/biography-CV.html
@@ -54,7 +54,7 @@
       <div class="eight columns">
         <div class="text">
     <p><b><u>BIOGRAPHY</u></b></p>
-      <p>Juniper Fleming is an artist currently living in Detroit. She recieved her BFA from the School of Visual Arts in 2014, and she is currently attaining her MFA in Photography at Cranbook Academy of Arts. She was awarded a Deutscher Akademischer Austauschdienst (DAAD) Fellowship in 2013. Her film, Predatory Prostitute has been screened in the 28th MIX NYC Queer Experimental Film Festival, the 2015 Sex Worker Film and Art Festival, XPOSED International Queer Film, and Berlin's Porn Film Festival. This past June, she also dipped her toes in theater, directing, producing, and performing in an all sex worker revival of Mae West's play, Sex, at Dixon Place Theater in NYC. </p>
+      <p>Juniper Fleming is an artist currently living in Detroit. She recieved her BFA from the School of Visual Arts in 2014, and she is currently attaining her MFA in Photography at Cranbook Academy of Arts. She was awarded a Deutscher Akademischer Austauschdienst (DAAD) Fellowship in 2013. In 2016, she also dipped her toes in theater, directing, producing, and performing in an all sex worker revival of Mae West's play, Sex, at Dixon Place Theater in NYC. Her film, Predatory Prostitute has been screened all over the world, and most recently shown at the MOMA PS1 Sex Workers' Festival of Resistance March 2018. </p>
       <p><b><u>C/V</u></b></p>
   
       <p><p><u>Education:</u></p></p>
@@ -86,10 +86,6 @@
 
       <p><p><u>Group Exhibitions:</u></p></p>
 
-      <p><p>MIX NYC Queer Experimental Film Festival, New York, NY (2015)</p></p>
-
-      <p><p>Sex Worker Film and Arts Festival, San Francisco, CA (2015)</p></p>
-
       <p><p>H Photobook show, Doomed Gallery, London, England (2014)</p></p>
 
       <p><p>Mentors, SVA Chelsea Gallery, New York, NY (2014)</p></p>
@@ -115,6 +111,22 @@
       <p><p>Photobook UK</p></p>
 
       <p><p>School of Visual Arts, NY</p></p>
+
+       <p><p><u>Film Showings:</u></p></p>
+
+      <p><p>MIX NYC Queer Experimental Film Festival, New York, NY (2015)</p></p>
+
+      <p><p>XPOSED International Queer Film, Berlin, Germany (2016)</p></p>
+
+      <p><p>Berlin Porn Film Festival, Berlin, Germany (2016)</p></p>
+
+      <p><p>PopPorn7 Festival, São Paulo, Brazil (2017)</p></p>
+
+      <p><p>Projection de films sur le travail sexuel, Paris, France (2017)</p></p>
+
+      <p><p>Putains de Rencontres, Marseille, France (2017)</p></p>
+
+      <p><p>MOMA PS1 Sex Workers' Festival of Resistance, NYC, NY (2018)</p></p>
 
 
       </div>
