added more film screenings

--- a/biography-CV.html
+++ b/biography-CV.html
@@ -126,6 +126,10 @@
 
       <p><p>Putains de Rencontres, Marseille, France (2017)</p></p>
 
+      <p><p>Human Trafficking and Social Justice Conference, Toledo, OH (2017)</p></p>
+
+      <p><p>La Academia del Pueblo Latino/a American Research Conference "Charting New Futures: Rethinking Race and Gender in LatinX U.S.A. and Beyond" Detroit, MI (2017)</p></p>
+
       <p><p>MOMA PS1 Sex Workers' Festival of Resistance, NYC, NY (2018)</p></p>
 
 
