--- a/biography-CV.html
+++ b/biography-CV.html
@@ -54,7 +54,7 @@
       <div class="eight columns">
         <div class="text">
     <p><b><u>BIOGRAPHY</u></b></p>
-      <p>Juniper Fleming is an artist currently living in Detroit. She recieved her BFA from the School of Visual Arts in 2014, and she is currently attaining her MFA in Photography at Cranbook Academy of Arts. She was awarded a Deutscher Akademischer Austauschdienst (DAAD) Fellowship in 2013. In 2016, she also dipped her toes in theater, directing, producing, and performing in an all sex worker revival of Mae West's play, Sex, at Dixon Place Theater in NYC. Her film, Predatory Prostitute has been screened all over the world, and most recently shown at the MOMA PS1 Sex Workers' Festival of Resistance March 2018. </p>
+      <p>Juniper Fleming is an artist currently living in Detroit. She received her BFA from the School of Visual Arts in 2014. She was awarded a Deutscher Akademischer Austauschdienst (DAAD) Fellowship in 2013. In 2016, she also dipped her toes in theater, directing, producing, and performing in an all sex worker revival of Mae West's play, Sex, at Dixon Place Theater in NYC. Her film, Predatory Prostitute has been screened all over the world, and most recently shown at the MOMA PS1 Sex Workers' Festival of Resistance March 2018. Her work from the series Reclamation and (Dis)atonement is currently being shown at Leslie Lohman Museum, in the show, ON OUR BACKS: The Revolutionary Art of Queer Sex Work. </p>
       <p><b><u>C/V</u></b></p>
   
       <p><p><u>Education:</u></p></p>
@@ -85,6 +85,8 @@
       <p><p>Projection, School of Visual Arts Photography Gallery, New York, NY (2012)</p></p>
 
       <p><p><u>Group Exhibitions:</u></p></p>
+
+      <p><p>ON OUR BACKS: The Revolutionary Art of Queer Sex Work, Leslie Lohman Museum, New York, NY (2019)</p></p>
 
       <p><p>H Photobook show, Doomed Gallery, London, England (2014)</p></p>
 
