--- a/index-expand.html
+++ b/index-expand.html
@@ -44,6 +44,7 @@
         <li>Works</li>
         <p><li><a href="reclamationgallery.html">/Reclamation and (Dis)atonement</a></li></p>
         <p><li><a href="predatoryprostitutegallery.html">/Predatory Prostitute</a></li></p>
+        <p><li><a href="glass-stone-gun-gallery.html">/Glass, Stone, and a Gun</a></li></p>
         <p><li><a href="projectiongallery.html">/Projection</a></li></p>
         <p><li><a href="miscellaneousgallery.html">/Miscellaneous</a></li></p>
         <li><a href="biography-CV.html">Biography/CV</a></li>
