text font fix glass

--- a/glass-stone-gun-gallery.html
+++ b/glass-stone-gun-gallery.html
@@ -62,7 +62,7 @@
       <img src="images/glass/Aileenmythology.jpeg" class="link">
 
        <div class="text">
-        <p><p> Glass, Stone, and a Gun</p></p>laser etched glass, 25"x25" (x2), 2017</p></p>
+        <p><p> Glass, Stone, and a Gun</p></p> <p><p>laser etched glass, 25"x25" (x2), 2017</p></p>
 
   <p><p> Rectifying (the erasure of) history and exploring (the possibilities of) a mythology around Aileen Wuornos. They created a monster of her, and this is my personal reformation/reclamation of that narrative.  </p></p>
 
