text change for glass

--- a/glass-stone-gun-gallery.html
+++ b/glass-stone-gun-gallery.html
@@ -64,7 +64,9 @@
        <div class="text">
         <p><p> Glass, Stone, and a Gun</p></p> <p><p>laser etched glass, 25"x25" (x2), 2017</p></p>
 
-  <p><p> Rectifying (the erasure of) history and exploring (the possibilities of) a mythology around Aileen Wuornos. They created a monster of her, and this is my personal reformation/reclamation of that narrative.  </p></p>
+<p><p> Stand between Medusa's snakes, and Aileen's bust. Look in the mirror from different angles, and see either yourself or Aileen as Medusa. </p></p>
+
+  <p><p> This piece is an attempt to rectify the erasure/loss of both a collective and personal history of Aileen Wuornos. By exploring the possibilities of a mythology around Aileen, I endeavor to reform/reclam the narrative of the "Monster".  </p></p>
 
 
 
